[gd_scene load_steps=25 format=2]

[ext_resource path="res://gamefiles/scripts/Benches.gd" type="Script" id=1]
[ext_resource path="res://gamefiles/scripts/bench_converter.gd" type="Script" id=2]
[ext_resource path="res://resources/01/BenchConverter001.png" type="Texture" id=3]
[ext_resource path="res://gamefiles/scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://gamefiles/scripts/CharacterSelectionManager.gd" type="Script" id=5]
[ext_resource path="res://resources/01/Character001.png" type="Texture" id=6]
[ext_resource path="res://resources/01/Character002.png" type="Texture" id=7]
[ext_resource path="res://resources/01/Character003.png" type="Texture" id=8]
[ext_resource path="res://gamefiles/scripts/Portal.gd" type="Script" id=9]
[ext_resource path="res://resources/01/Portal001.png" type="Texture" id=10]
[ext_resource path="res://gamefiles/tilesets/tileset02.tres" type="TileSet" id=11]
[ext_resource path="res://gamefiles/scripts/UIManager.gd" type="Script" id=12]
[ext_resource path="res://gamefiles/scripts/MaterialConverter.gd" type="Script" id=13]
[ext_resource path="res://resources/01/Material002.png" type="Texture" id=14]
[ext_resource path="res://resources/01/Arrow001.png" type="Texture" id=15]
[ext_resource path="res://resources/01/Skillpoint001.png" type="Texture" id=16]
[ext_resource path="res://resources/01/Material003.png" type="Texture" id=17]
[ext_resource path="res://resources/01/Material001.png" type="Texture" id=18]
[ext_resource path="res://gamefiles/scripts/PermanentUIManager.gd" type="Script" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 832, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 448 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 64 )

[node name="World" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="Benches" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Converter" type="Area2D" parent="Benches"]
position = Vector2( 320, 320 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Benches/Converter"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Benches/Converter"]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="OutOfBounds" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="OutOfBounds"]

[node name="Bottom" type="CollisionShape2D" parent="OutOfBounds/StaticBody2D"]
position = Vector2( 0, 480 )
shape = SubResource( 2 )

[node name="Left" type="CollisionShape2D" parent="OutOfBounds/StaticBody2D"]
position = Vector2( -800, 0 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="OutOfBounds/StaticBody2D"]
position = Vector2( 800, 0 )
shape = SubResource( 3 )

[node name="Top" type="CollisionShape2D" parent="OutOfBounds/StaticBody2D"]
position = Vector2( 0, -480 )
shape = SubResource( 2 )

[node name="CharacterSelection" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Slot1" type="Area2D" parent="CharacterSelection"]
position = Vector2( -672, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterSelection/Slot1"]
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="CharacterSelection/Slot1"]
texture = ExtResource( 6 )

[node name="Slot2" type="Area2D" parent="CharacterSelection"]
position = Vector2( -512, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterSelection/Slot2"]
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="CharacterSelection/Slot2"]
texture = ExtResource( 7 )

[node name="Slot3" type="Area2D" parent="CharacterSelection"]
position = Vector2( -352, 320 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterSelection/Slot3"]
scale = Vector2( 2, 2 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="CharacterSelection/Slot3"]
texture = ExtResource( 8 )

[node name="Portal" type="Area2D" parent="."]
position = Vector2( 672, 64 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Portal"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
shape = SubResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
tile_data = PoolIntArray( 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0 )

[node name="UImaster" type="Node" parent="."]
script = ExtResource( 12 )

[node name="MaterialConverter" type="Panel" parent="UImaster"]
editor/display_folded = true
margin_right = 240.0
margin_bottom = 240.0
grow_horizontal = 2
size_flags_horizontal = 0
script = ExtResource( 13 )

[node name="VBoxContainer" type="VBoxContainer" parent="UImaster/MaterialConverter"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="UImaster/MaterialConverter/VBoxContainer"]
margin_right = 224.0
margin_bottom = 64.0

[node name="Resource" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Resource_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_top = 25.0
margin_right = 76.0
margin_bottom = 39.0
text = "3"

[node name="Arrow" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
texture = ExtResource( 15 )

[node name="Skillpoint_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_top = 25.0
margin_right = 156.0
margin_bottom = 39.0
text = "1"

[node name="Skillpoint" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
texture = ExtResource( 16 )

[node name="HBoxContainer2" type="HBoxContainer" parent="UImaster/MaterialConverter/VBoxContainer"]
margin_top = 68.0
margin_right = 224.0
margin_bottom = 132.0

[node name="Resource" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 17 )

[node name="Resource_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2"]
margin_left = 68.0
margin_top = 25.0
margin_right = 76.0
margin_bottom = 39.0
text = "3"

[node name="Arrow" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
texture = ExtResource( 15 )

[node name="Skillpoint_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2"]
margin_left = 148.0
margin_top = 25.0
margin_right = 156.0
margin_bottom = 39.0
text = "1"

[node name="Skillpoint" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
texture = ExtResource( 16 )

[node name="HBoxContainer3" type="HBoxContainer" parent="UImaster/MaterialConverter/VBoxContainer"]
margin_top = 136.0
margin_right = 224.0
margin_bottom = 200.0

[node name="Resource" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 18 )

[node name="Resource_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3"]
margin_left = 68.0
margin_top = 25.0
margin_right = 76.0
margin_bottom = 39.0
text = "3"

[node name="Arrow" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
texture = ExtResource( 15 )

[node name="Skillpoint_count" type="Label" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3"]
margin_left = 148.0
margin_top = 25.0
margin_right = 156.0
margin_bottom = 39.0
text = "1"

[node name="Skillpoint" type="TextureRect" parent="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
texture = ExtResource( 16 )

[node name="PermanentUI" type="Node2D" parent="UImaster"]
position = Vector2( -768, -448 )
script = ExtResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="UImaster/PermanentUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="UImaster/PermanentUI/MarginContainer"]
margin_right = 117.0
margin_bottom = 200.0

[node name="InfoBars" type="VBoxContainer" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 200.0

[node name="BarStone" type="HBoxContainer" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars"]
margin_right = 117.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarStone"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarStone"]
margin_left = 68.0
margin_top = 25.0
margin_right = 113.0
margin_bottom = 39.0
text = "Wood: "

[node name="Value" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarStone"]
margin_left = 117.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 39.0

[node name="BarWood" type="HBoxContainer" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars"]
margin_top = 68.0
margin_right = 117.0
margin_bottom = 132.0

[node name="TextureRect" type="TextureRect" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarWood"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarWood"]
margin_left = 68.0
margin_top = 25.0
margin_right = 113.0
margin_bottom = 39.0
text = "Wood: "

[node name="Value" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarWood"]
margin_left = 117.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 39.0

[node name="BarGrass" type="HBoxContainer" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars"]
margin_top = 136.0
margin_right = 117.0
margin_bottom = 200.0

[node name="TextureRect" type="TextureRect" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarGrass"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 18 )

[node name="Label" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarGrass"]
margin_left = 68.0
margin_top = 25.0
margin_right = 113.0
margin_bottom = 39.0
text = "Wood: "

[node name="Value" type="Label" parent="UImaster/PermanentUI/MarginContainer/HBoxContainer/InfoBars/BarGrass"]
margin_left = 117.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 39.0
[connection signal="body_entered" from="CharacterSelection/Slot1" to="CharacterSelection" method="_on_Area2D_body_entered" binds= [ 1 ]]
[connection signal="body_exited" from="CharacterSelection/Slot1" to="CharacterSelection" method="_on_Area2D_body_exited" binds= [ 1 ]]
[connection signal="body_entered" from="CharacterSelection/Slot2" to="CharacterSelection" method="_on_Area2D_body_entered" binds= [ 2 ]]
[connection signal="body_exited" from="CharacterSelection/Slot2" to="CharacterSelection" method="_on_Area2D_body_exited" binds= [ 2 ]]
[connection signal="body_entered" from="CharacterSelection/Slot3" to="CharacterSelection" method="_on_Area2D_body_entered" binds= [ 3 ]]
[connection signal="body_exited" from="CharacterSelection/Slot3" to="CharacterSelection" method="_on_Area2D_body_exited" binds= [ 3 ]]
[connection signal="mouse_entered" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer/Arrow" to="UImaster/MaterialConverter" method="mouse_entered_material_arrow" binds= [ 0 ]]
[connection signal="mouse_exited" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer/Arrow" to="UImaster/MaterialConverter" method="mouse_exit_material_arrow" binds= [ 0 ]]
[connection signal="mouse_entered" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2/Arrow" to="UImaster/MaterialConverter" method="mouse_entered_material_arrow" binds= [ 1 ]]
[connection signal="mouse_exited" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer2/Arrow" to="UImaster/MaterialConverter" method="mouse_exit_material_arrow" binds= [ 1 ]]
[connection signal="mouse_entered" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3/Arrow" to="UImaster/MaterialConverter" method="mouse_entered_material_arrow" binds= [ 2 ]]
[connection signal="mouse_exited" from="UImaster/MaterialConverter/VBoxContainer/HBoxContainer3/Arrow" to="UImaster/MaterialConverter" method="mouse_exit_material_arrow" binds= [ 2 ]]
